quick css fix to get rid of some whitespace

--- a/BhdResponsiveSite/Content/Site.css
+++ b/BhdResponsiveSite/Content/Site.css
@@ -1096,7 +1096,7 @@ section.module.parallax-4 {
 .epk-column {
     float: left;
     width: 50%;
-    padding: 30px;
+    padding: 0 30px;
     text-align: left !important;
 }
 
